api(helpers,geometries,renderers)

--- a/manual/ru/puzzles/Numbers.html
+++ b/manual/ru/puzzles/Numbers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Numbers Puzzles Reference - Soft8Soft</title>
+    <title>Числовые Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="These puzzles provide means for various operations with numbers in your scenario."/>
     <base href="../../../" />
@@ -10,36 +10,36 @@
   </head>
   <body><article>
 
-    <h1>Numbers</h1>
+    <h1>Числа</h1>
 
     <p>
-    These puzzles provide means for various operations with numbers in your scenario.
+      Эти пазлы предоставляют средства для выполнения различных операций с числами в вашем сценарии.
     </p>
 
     <img src="files/puzzles/puzzles-numbers.jpg" style="max-width: 1000px">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
     [anchor:number]
 
     <h3>number</h3>
 
     <p>
-    This universally used puzzle provides the means to supply some number to your Puzzles scenario.
+      Этот универсальный пазл дает возможность внести некоторое число в сценарий пазлов.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-number.jpg" style="max-width: 1000px">
 
     <p>
-    Numbers can be written without decimals (integers) or with decimals (floating-point numbers). Extra large or extra small numbers can be written with scientific (exponent) notation.
+      Числа можно записывать без десятичных знаков (целые числа) или с десятичными знаками (числа с плавающей точкой). Очень большие или очень маленькие числа могут быть записаны с помощью научной (экспоненциальной) нотации.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-number-example.jpg" style="max-width: 1000px">
@@ -51,7 +51,7 @@
     <h3>angle</h3>
 
     <p>
-    This puzzle allows you to visually define angle (in degrees).
+      Этот пазл позволяет визуально определить угол (в градусах).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-angle.jpg" style="max-width: 1000px">
@@ -63,13 +63,13 @@
     <h3>arithmetic operation (with two inputs)</h3>
 
     <p>
-    This puzzle allows you to perform elementary arithmetic operations: addition (+), subtraction (-), multiplication (×) and division (÷), as well as exponentiation (^).
+      Этот пазл позволяет выполнять элементарные арифметические действия: сложение (+), вычитание (-), умножение (×) и деление (÷), а также экспоненцию (^).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-elementary-operation.jpg" style="max-width: 1000px">
 
     <p>
-    Please note that floating-point arithmetic is not always 100% accurate, and may produce unpredictable results when comparing numeric values. To get rid of those precision issues, you may use <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
+      Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-elementary-operation-example.jpg" style="max-width: 1000px">
@@ -81,19 +81,19 @@
     <h3>arithmetic operation (with single input)</h3>
 
     <p>
-    This puzzle allows you to perform the following mathematical operations: square root (√), absolute value aka modulus (|x|), sign change aka negation (-), natural logarithm (ln), decimal logarithm (log10), natural exponential function (e^), and power of ten (10^).
+      Этот пазл позволяет выполнять следующие математические операции: квадратный корень (√), абсолютное значение - модуль (|x|), изменение знака - отрицание (-), натуральный логарифм (ln), десятичный логарифм (log10), натуральная экспоненциальная функция (e^) и степень десяти (10^).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-arithmetic-operation-single-input-example.jpg" style="max-width: 1000px">
 
     <p>
-    Please note that floating-point arithmetic is not always 100% accurate, and may produce unpredictable results when comparing numeric values. To get rid of those precision issues, you may use <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
+      Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
     </p>
 
 
@@ -103,13 +103,13 @@
     <h3>round (to integer)</h3>
 
     <p>
-    This puzzle rounds a specified number. The *round* variant rounds a number to the nearest integer: 2.49 will be rounded down (producing 2), and 2.5 will be rounded up (producing 3). The *round up* variant rounds a number upward to the nearest integer: 2.1 will be rounded up (producing 3). The *round down* variant rounds a number downward to the nearest integer: 2.9 will be rounded down (producing 2).
+      Данный пазл округляет заданное число. Вариант *round* округляет число до ближайшего целого числа: 2,49 округляется вниз (получается 2), а 2,5 округляется вверх (получается 3). Вариант *round up* округляет число в большую сторону до ближайшего целого числа: 2.1 округляется в большую сторону (получается 3). Вариант *round down* округляет число до ближайшего целого: 2.9 округляется вниз (получается 2).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-round.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-round-examples.jpg" style="max-width: 1000px">
@@ -121,19 +121,19 @@
     <h3>round with precision</h3>
 
     <p>
-    This puzzle rounds a given number using the specified precision.
+      Этот пазл округляет заданное число с указанной точностью.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-round-with-precision.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-round-with-precision-example.jpg" style="max-width: 1000px">
 
     <p>
-    Floating-point arithmetic is not always 100% accurate, and may produce unpredictable results when comparing numeric values. To get rid of those precision issues, you may use rounding with precision as follows:
+      Арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a> следующим образом: 
     </p>
 
     <img src="files/puzzles/puzzles-numbers-round-with-precision-example2.jpg" style="max-width: 1000px">
@@ -145,14 +145,13 @@
     <h3>check</h3>
 
     <p>
-    This puzzle checks whether a specified number is even, odd, prime, whole, positive, negative, or divisible by some other number. The result is *true* if this is the case and *false* if not. For using with <a href='manual/ru/puzzles/Logic.html'>Logic</a> puzzles.
-
+      Этот пазл проверяет, является ли заданное число четным, нечетным, простым, целым, положительным, отрицательным или кратным какому-либо другому числу. Результатом будет *true*, если это так, и *false*, если нет. Применяется с пазлами <a href='manual/ru/puzzles/Logic.html'>Logic</a>.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-check.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-check-examples.jpg" style="max-width: 1000px">
@@ -164,13 +163,13 @@
     <h3>clamp</h3>
 
     <p>
-    This puzzle constraints a number to be between the specified limits (inclusive).
+      Этот пазл ограничивает число, находящееся между указанными пределами (включительно).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-clamp.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-clamp-example.jpg" style="max-width: 1000px">
@@ -182,17 +181,17 @@
     <h3>random integer</h3>
 
     <p>
-    This puzzle returns a random integer number between specified numbers (inclusive both limits).
+      Этот пазл возвращает случайное целое число между указанными числами (включая оба предела).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-random-integer.jpg" style="max-width: 1000px">
 
     <p>
-    Note: supplying non-integer limits is possible, although this extends the range as this puzzle performs some additional rounding under the hood.
+      Примечание: возможно введение нецелых пределов, хотя это расширяет диапазон, поскольку этот пазл выполняет некоторые дополнительные округления. 
     </p>
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-random-integer-examples.jpg" style="max-width: 1000px">
@@ -204,13 +203,13 @@
     <h3>random fraction</h3>
 
     <p>
-    This puzzle returns a random floating-point number between 0 (inclusive) and 1 (exclusive).
+      Данный пазл возвращает случайное число с плавающей точкой в диапазоне от 0 (включительно) до 1 (исключительно).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-random-fraction.jpg" style="max-width: 1000px">
 
     <p>
-    In the following example this puzzle is used to generate a random color for a material:
+      В следующем примере этот пазл используется для генерации случайного цвета для материала:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-random-fraction-example.jpg" style="max-width: 1000px">
@@ -222,13 +221,13 @@
     <h3>remainder</h3>
 
     <p>
-    This puzzle finds the remainder after division of one number by another (aka the modulo operation).
+      Этот пазл позволяет найти остаток после деления одного числа на другое (операция модуляции).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-remainder.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-remainder-examples.jpg" style="max-width: 1000px">
@@ -240,7 +239,7 @@
     <h3>operations on list</h3>
 
     <p>
-    Performs an operation on the numbers of a specified <a href='manual/ru/puzzles/Lists.html'>list</a>.
+      Выполняет операцию над числами указанного <a href='manual/ru/puzzles/Lists.html'>списка</a>.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-operations-on-list.jpg" style="max-width: 1000px">
@@ -248,34 +247,34 @@
     <p>
     <ul>
     <li>
-    *sum* - calculates the sum of all numbers in the list.
+    *sum* - вычисляет сумму всех чисел в списке.
     </li>
     <li>
-    *min* - finds the smallest number.
+    *min* - находит наименьшее число.
     </li>
     <li>
-    *max* - finds the largest number.
+    *max* - находит наибольшее число.
     </li>
     <li>
-    *average* - finds the arithmetic mean (as the sum of all numbers divided by the length of the list).
+    *average* - находит среднее арифметическое (как сумму всех чисел, деленную на длину списка).
     </li>
     <li>
-    *median* - finds the median (as the middle number when all numbers are sorted from smallest to largest).
+    *median* - находит медиану (как среднее число, когда все числа сортируются от наименьшего к наибольшему).
     </li>
     <li>
-    *modes* - finds the modes (as a list of numbers that appear the most frequently in the list).
+    *modes* - находит режимы (в виде списка чисел, которые наиболее часто встречаются в списке).
     </li>
     <li>
-    *standard deviation* - calculates the standard deviation (as the square root of the average of the squared deviations from the arithmetic mean).
+    *standard deviation* - вычисляет стандартное отклонение (как квадратный корень из среднего квадратичного отклонения от среднего арифметического).
     </li>
     <li>
-    *random item* - returns a randomly chosen item.
+    *random item* - возвращает случайно выбранный элемент.
     </li>
     </ul>
     </p>
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-operations-on-list-examples.jpg" style="max-width: 1000px">
@@ -287,19 +286,19 @@
     <h3>trigonometric functions</h3>
 
     <p>
-    This puzzle allows you to calculate the values of the trigonometric functions *sine* (sin), *cosine* (cos), and *tangent* (tan), as well as the values of their inverse counterparts *arcsine* (asin), *arccosine* (acos), and *arctangent* (atan). The puzzle expects (or returns) values expressed in degrees.
+      Данный пазл позволяет вычислить значения тригонометрических функций *синус* (sin), *косинус* (cos) и *тангенс* (tan), а также значения их обратных аналогов *арксинус* (asin), *арккосинус* (acos) и *арктангенс* (atan). Пазл ожидает (или возвращает) значения, выраженные в градусах.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-trigonometric-functions.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-trigonometric-functions-examples.jpg" style="max-width: 1000px">
 
     <p>
-    Please note that floating-point arithmetic is not always 100% accurate, and may produce unpredictable results when comparing numeric values. To get rid of those precision issues, you may use <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
+      Обратите внимание, что арифметика с плавающей точкой не всегда точна на 100% и может давать непредсказуемые результаты при сравнении числовых значений. Чтобы избавиться от проблем с точностью, вы можете использовать пазл <a href='manual/ru/puzzles/Numbers.html#round_with_precision'>rounding with precision</a>.
     </p>
 
 
@@ -309,13 +308,13 @@
     <h3>constants</h3>
 
     <p>
-    This puzzle returns the following mathematical constants: pi (&pi;), Euler's number <i>e</i>, the golden ratio (&phi;), square root of 2, square root of &frac12;, and infinity value (&infin;).
+      Этот пазл позволяет получить следующие математические константы: пи (&pi;), число Эйлера <i>e</i>, золотое сечение (&phi;), квадратный корень из 2, квадратный корень из &frac12; и значение бесконечности (&infin;).
     </p>
 
     <img src="files/puzzles/puzzles-numbers-constants.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-numbers-constants-examples.jpg" style="max-width: 1000px">
@@ -326,7 +325,7 @@
     <h3>create vector</h3>
 
     <p>
-      This puzzle returns a new three-dimensional vector which consists of the given X, Y, Z coordinates.
+      Этот пазл возвращает новый трехмерный вектор, состоящий из заданных координат X, Y, Z.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-create-vector.jpg" class="centered" style="max-width: 664px">
@@ -337,7 +336,7 @@
     <h3>set vector value</h3>
 
     <p>
-      This puzzle set the given value (*x*, *y*, *z* coordinate or *length*) for the given vector.
+      Этот пазл устанавливает заданное значение (*x*, *y*, *z* координаты или *length*) для заданного вектора.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-set-vector-value.jpg" class="centered" style="max-width: 611px">
@@ -348,21 +347,21 @@
     <h3>get vector value</h3>
 
     <p>
-      This puzzle returns the given value taken from the given vector.
+      Данный пазл возвращает заданное значение, взятое из заданного вектора.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-get-vector-value.jpg" class="centered" style="max-width: 744px">
 
-    <p>Returned values:</p>
+    <p>Возвращает значения:</p>
 
     <ul>
-      <li>*x* - X coordinate.</li>
-      <li>*y* - Y coordinate.</li>
-      <li>*z* - Z coordinate.</li>
-      <li>*is zero* - <em>true</em> if the vector has zero length, <em>false</em> otherwise.</li>
-      <li>*length* - vector length.</li>
-      <li>*negated* - a new vector which points in the reverse direction.</li>
-      <li>*normalized* - a new vector with length 1.</li>
+      <li>*x* - координата X.</li>
+      <li>*y* - координата Y.</li>
+      <li>*z* - координата Z.</li>
+      <li>*is zero* - <em>true</em> если вектор имеет нулевую длину, в противном случае<em>false</em>.</li>
+      <li>*length* - длина вектора.</li>
+      <li>*negated* - новый вектор, указывающий в обратном направлении.</li>
+      <li>*normalized* - новый вектор длиной 1.</li>
     </ul>
 
     [anchor:vector_math]
@@ -370,27 +369,27 @@
     <h3>vector math</h3>
 
     <p>
-      This puzzle performs a math operation between two vectors and returns a new vector.
+      Данный пазл выполняет математическую операцию между двумя векторами и возвращает новый вектор.
     </p>
 
     <img src="files/puzzles/puzzles-numbers-vector-math.jpg" class="centered" style="max-width: 758px">
 
-    <p>Operations:</p>
+    <p>Операции:</p>
 
     <ul>
-      <li><strong>+</strong> - add vectors.</li>
-      <li><strong>-</strong> - subtract vectors.</li>
-      <li><strong>×</strong> - multiply vectors (per-component).</li>
-      <li><strong>/</strong> - divide vectors (per-component).</li>
-      <li><strong>dot</strong> - calculate and return a dot product between vectors.</li>
-      <li><strong>cross</strong> - calculate and return a cross product between vectors.</li>
-      <li><strong>rotate</strong> - rotate a vector by Euler angles given as the second parameter. Euler angles are specified in degrees.</li>
+      <li><strong>+</strong> - добавляет векторы.</li>
+      <li><strong>-</strong> - вычитает векторы.</li>
+      <li><strong>×</strong> - перемножает векторы (по компонентам).</li>
+      <li><strong>/</strong> - делит векторы (по компонентам).</li>
+      <li><strong>dot</strong> - вычислить и вернуть точечное произведение между векторами.</li>
+      <li><strong>cross</strong> - вычислить и вернуть перекрестное произведение между векторами.</li>
+      <li><strong>rotate</strong> - повернуть вектор на углы Эйлера, указанные в качестве второго параметра. Углы Эйлера задаются в градусах.</li>
     </ul>
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обратитесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
